--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 <head>
 	<!-- <base href="/extensions/angularTemplate/" /> -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Autoitalia Mobile Dashboard</title>
+	<title>test Mashup</title>
 	<meta charset="utf-8">
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta name="HandheldFriendly" content="True">
 	<meta name="MobileOptimized" content="330">
-	<meta name="viewport"
-		content="width=330, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+	<meta name="viewport" content="width=330, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta http-equiv="cleartype" content="on">
+	<meta name="robots" content="noindex">
+	<meta name="googlebot" content="noindex">
 	<link rel="shortcut icon" href="img/favicon.ico" />
 	<!-- materialize css -->
 	<link rel="stylesheet" href="js/vendor/materialize/materialize.min.css">
