--- a/index.html
+++ b/index.html
@@ -32,7 +32,23 @@
 </head>
 
 <body>
-	<!-- For debugging selections uncomment the line below -->
+	<!-- Cookies Modal  -->
+	<div id="modal_ios" class="modal">
+		<div class="modal-content">
+			<p>We detected that 3rd party cookies are not enabled on your device,<br>
+				cookies are required to open content of Qlik, check how enable 3rd party cookies for <br>
+				<a href="https://support.google.com/chrome/answer/95647?hl=en&co=GENIE.Platform%3DiOS" target="_blank">Chrome</a> and
+				<a href=" https://support.yuja.com/hc/en-us/articles/360049591534-Enabling-Third-Party-Cookies-for-Mobile-Safari" target="_blank">Safary</a>
+			</p>
+		</div>
+		<div class="modal-footer">
+			<label for="dont-show" class="dont-show-checkbox">
+				<input id="dont-show" type="checkbox"/>
+				<span>Do not show again </span>
+			</label>
+			<button id="modal_submit" class="modal-close waves-light btn">OK</a>
+		</div>
+	</div> 
 
 	<div class="container">
 		<div ng-view id="maincontent"></div>
