Do not show again opened

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 			</p>
 		</div>
 		<div class="modal-footer">
-		<!-- 	<label for="dont-show" class="dont-show-checkbox">
+		    <label for="dont-show" class="dont-show-checkbox">
 				<input id="dont-show" type="checkbox"/>
 				<span>Do not show again </span>
-			</label> -->
+			</label>
 			<button id="modal_submit" class="modal-close waves-light btn">OK</a>
 		</div>
 	</div> 
