--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<div class="modal-content">
 			<p>We detected that 3rd party cookies are not enabled on your device,<br>
 				cookies are required to open content of Qlik, check how enable 3rd party cookies for <br>
-				<a href="https://support.google.com/chrome/answer/95647?hl=en&co=GENIE.Platform%3DiOS" target="_blank">Chrome</a> and
+				<a href="https://hf-files-oregon.s3.amazonaws.com/hdpuscsd_kb_attachments/2020/12-17/9ed0810b-b360-48a2-b7c6-f1baa3b0ad9e/60_-_Chrome.png" target="_blank">Chrome</a> and
 				<a href=" https://support.yuja.com/hc/en-us/articles/360049591534-Enabling-Third-Party-Cookies-for-Mobile-Safari" target="_blank">Safary</a>
 			</p>
 		</div>
